--- a/styl.css
+++ b/styl.css
@@ -2,13 +2,19 @@
     font-family: Arial;
 }
 
-input {
+input, select {
     margin: 5px 10px;
     border: 1px black solid;
     background-color: white;
     border-radius: 3px;
     padding: 5px 10px;
     font-size: 1em;
+}
+select {
+    margin: 0 5px;
+    font-size: 0.8em;
+    font-weight: bold;
+    padding: 5px 0;
 }
 
 .warning {
@@ -36,6 +42,7 @@ input {
 }
 
 a, .button {
+    margin: 10px 5px;
     padding: 10px 15px;
     border: 1px black solid;
     text-decoration: none;
